--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "Y-lonelY",
   "license": "MIT",
   "dependencies": {
+    "lodash": "^4.17.21",
+    "ua-parser-js": "^0.7.28",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -35,8 +37,10 @@
     "@rollup/plugin-multi-entry": "^4.0.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@rollup/plugin-typescript": "^5.0.2",
+    "@types/lodash": "^4.14.170",
     "@types/node": "^14.14.31",
     "@types/react": "^16.9.49",
+    "@types/ua-parser-js": "^0.7.36",
     "rimraf": "^3.0.2",
     "rollup-plugin-postcss": "^3.1.8",
     "rollup-plugin-terser": "^7.0.2",
